--- a/frontend/templates/frontend/footer.html
+++ b/frontend/templates/frontend/footer.html
@@ -5,14 +5,14 @@
 
       <div class="col-lg-3">
         <a href="index.html">
-          <img class="h-40px" src="{% static 'dashboard/images/logo-light.svg' %}" alt="logo">
+          <img class="h-40px" src="{% static 'frontend/img/logo.png' %}" alt="Freesport">
         </a>
         <p class="my-3 text-body-secondary">
           Reserva centros deportivos en un solo lugar desde donde quieras de manera fácil y rápida.
         </p>
         <p class="mb-2"><a href="#" class="text-body-secondary text-primary-hover">
-          <i class="bi bi-telephone me-2"></i>+51 918387410</a></p>
-        <p class="mb-0"><a href="#" class="text-body-secondary text-primary-hover"><i class="bi bi-envelope me-2"></i>freesport@gmail.com</a>
+          <i class="bi bi-telephone me-2"></i>+51 931399302</a></p>
+        <p class="mb-0"><a href="#" class="text-body-secondary text-primary-hover"><i class="bi bi-envelope me-2"></i>info@freesport.pe</a>
         </p>
       </div>
       <div class="col-lg-8 ms-auto">
@@ -50,49 +50,46 @@
       <div class="col-sm-7 col-md-6 col-lg-4">
         <h5 class="text-white mb-2">Pagos seguros</h5>
         <ul class="list-inline mb-0 mt-3">
-          <li class="list-inline-item"><a href="#"><img src="{% static 'dashboard/images/element/paypal.svg' %}"
-                                                        class="h-30px"
-                                                        alt=""></a></li>
-          <li class="list-inline-item"><a href="#"><img src="{% static 'dashboard/images/element/visa.svg' %}"
-                                                        class="h-30px" alt=""></a>
+          <li class="list-inline-item">
+            <a href="#">
+              <img src="{% static 'dashboard/images/element/visa.svg' %}" class="h-30px" alt="">
+            </a>
+            <a href="#">
+              <img src="{% static 'frontend/img/image2vector.svg' %}" class="h-30px" alt="">
+            </a>
           </li>
-          <li class="list-inline-item"><a href="#"><img src="{% static 'dashboard/images/element/mastercard.svg' %}"
-                                                        class="h-30px"
-                                                        alt=""></a></li>
-          <li class="list-inline-item"><a href="#"><img src="{% static 'dashboard/images/element/expresscard.svg' %}"
-                                                        class="h-30px"
-                                                        alt=""></a></li>
+
         </ul>
       </div>
 
-      <!-- Social media icon -->
       <div class="col-sm-5 col-md-6 col-lg-3 text-sm-end">
         <h5 class="text-white mb-2">Síguenos en:</h5>
         <ul class="list-inline mb-0 mt-3">
-          <li class="list-inline-item"><a class="btn btn-sm px-2 bg-facebook mb-0" href="#"><i
-              class="fab fa-fw fa-facebook-f"></i></a></li>
-          <li class="list-inline-item"><a class="btn btn-sm shadow px-2 bg-instagram mb-0" href="#"><i
-              class="fab fa-fw fa-instagram"></i></a></li>
-          <li class="list-inline-item"><a class="btn btn-sm shadow px-2 bg-twitter mb-0" href="#"><i
-              class="fab fa-fw fa-twitter"></i></a></li>
-          <li class="list-inline-item"><a class="btn btn-sm shadow px-2 bg-linkedin mb-0" href="#"><i
-              class="fab fa-fw fa-linkedin-in"></i></a></li>
+          <li class="list-inline-item">
+            <a class="btn btn-sm px-2 bg-facebook mb-0" target="_blank" href="https://www.facebook.com/profile.php?id=61556673353614"><i
+              class="fab fa-fw fa-facebook-f"></i></a>
+          </li>
+          <li class="list-inline-item">
+            <a class="btn btn-sm shadow px-2 bg-instagram mb-0" target="_blank" href="https://www.instagram.com/freesport.reservas"><i
+              class="fab fa-fw fa-instagram"></i></a>
+          </li>
+          <li class="list-inline-item">
+            <a class="btn btn-sm shadow px-2 bg-white mb-0" target="_blank" href="https://www.tiktok.com/@freesport.reserva"><i
+              class="fab fa-fw fa-tiktok bg-white"></i>
+            </a>
+          </li>
         </ul>
       </div>
     </div>
 
-    <!-- Divider -->
     <hr class="mt-4 mb-0">
 
-    <!-- Bottom footer -->
     <div class="row">
       <div class="container">
         <div class="d-lg-flex justify-content-between align-items-center py-3 text-center text-lg-start">
-          <!-- copyright text -->
           <div class="text-body-secondary text-primary-hover"> Copyrights © 2024. Desarrollado por <a
               href="#" class="text-body-secondary">Freesport</a>.
           </div>
-          <!-- copyright links-->
           <div class="nav mt-2 mt-lg-0">
             <ul class="list-inline text-primary-hover mx-auto mb-0">
               <li class="list-inline-item me-0"><a class="nav-link text-body-secondary py-1" href="#">Políticas de
