--- a/users/templates/users/auth_base.html
+++ b/users/templates/users/auth_base.html
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#57b28b">
   <meta name="author" content="Webestica.com">
-  <meta name="description" content="Booking - Multipurpose Online Booking Theme">
+  <meta name="description" content="Freesport - Regístrate en Freesport">
 
   <!-- Dark mode -->
   <script>
@@ -73,7 +73,7 @@
 
   </script>
 
-  <link rel="shortcut icon" href="{% static 'dashboard/images/favicon.ico' %}">
+  <link rel="shortcut icon" href="{% static 'frontend/img/logo.ico' %}">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet"
