--- a/dashboard/static/dashboard/css/style.css
+++ b/dashboard/static/dashboard/css/style.css
@@ -29,7 +29,7 @@
   --bs-gray-700: #5e5e5f;
   --bs-gray-800: #0b0a12;
   --bs-gray-900: #0b0a12;
-  --bs-primary: #57b28b;
+  --bs-primary: #08b44c;
   --bs-white: #fff;
   --bs-secondary: #85878a;
   --bs-success: #0cbc87;
@@ -40,7 +40,7 @@
   --bs-dark: #0b0a12;
   --bs-orange: #fd7e14;
   --bs-mode: #fff;
-  --bs-primary-rgb: 87, 187, 139;
+  --bs-primary-rgb: 8, 180, 76;
   --bs-white-rgb: 255, 255, 255;
   --bs-secondary-rgb: 109, 192, 113;
   --bs-success-rgb: 12, 188, 135;
@@ -51,7 +51,7 @@
   --bs-dark-rgb: 11, 10, 18;
   --bs-orange-rgb: 253, 126, 20;
   --bs-mode-rgb: 255, 255, 255;
-  --bs-primary-text-emphasis: #57b28b;
+  --bs-primary-text-emphasis: #08b44c;
   --bs-secondary-text-emphasis: #5d5f61;
   --bs-success-text-emphasis: #08845f;
   --bs-info-text-emphasis: #107181;
@@ -99,7 +99,7 @@
   --bs-tertiary-bg: #f5f5f6;
   --bs-tertiary-bg-rgb: 245, 245, 246;
   --bs-heading-color: var(--bs-gray-900);
-  --bs-link-color: #57b28b;
+  --bs-link-color: #08b44c;
   --bs-link-color-rgb: 87, 178, 139;
   --bs-link-decoration: none;
   --bs-link-hover-color: #3D8C40;
@@ -172,7 +172,7 @@
   --bs-light-border-subtle: #495057;
   --bs-dark-border-subtle: #343a40;
   --bs-heading-color: inherit;
-  --bs-link-color: #57b28b;
+  --bs-link-color: #08b44c;
   --bs-link-hover-color: #3D8C40;
   --bs-link-color-rgb: 76, 175, 80;
   --bs-link-hover-color-rgb: 61, 140, 64;
@@ -2886,8 +2886,8 @@ textarea.form-control-lg {
           box-shadow: 0 0 0 0 rgba(81, 67, 217, 0.25);
 }
 .form-check-input:checked {
-  background-color: #57b28b;
-  border-color: #57b28b;
+  background-color: #08b44c;
+  border-color: #08b44c;
 }
 .form-check-input:checked[type=checkbox] {
   --bs-form-check-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3e%3c/svg%3e");
@@ -2896,8 +2896,8 @@ textarea.form-control-lg {
   --bs-form-check-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e");
 }
 .form-check-input[type=checkbox]:indeterminate {
-  background-color: #57b28b;
-  border-color: #57b28b;
+  background-color: #08b44c;
+  border-color: #08b44c;
   --bs-form-check-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 .form-check-input:disabled {
@@ -2995,7 +2995,7 @@ textarea.form-control-lg {
   margin-top: -0.25rem;
   -webkit-appearance: none;
           appearance: none;
-  background-color: #57b28b;
+  background-color: #08b44c;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -3026,7 +3026,7 @@ textarea.form-control-lg {
   height: 1rem;
   -moz-appearance: none;
        appearance: none;
-  background-color: #57b28b;
+  background-color: #08b44c;
   border: 0;
   border-radius: 1rem;
   -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3575,8 +3575,8 @@ textarea.form-control-lg {
 
 .btn-primary {
   --bs-btn-color: #fff;
-  --bs-btn-bg: #57b28b;
-  --bs-btn-border-color: #57b28b;
+  --bs-btn-bg: #08b44c;
+  --bs-btn-border-color: #08b44c;
   --bs-btn-hover-color: #fff;
   --bs-btn-hover-bg: #3D8C40;
   --bs-btn-hover-border-color: #3D8C40;
@@ -3586,8 +3586,8 @@ textarea.form-control-lg {
   --bs-btn-active-border-color: #4CAF50;
   --bs-btn-active-shadow: none;
   --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #57b28b;
-  --bs-btn-disabled-border-color: #57b28b;
+  --bs-btn-disabled-bg: #08b44c;
+  --bs-btn-disabled-border-color: #08b44c;
 }
 
 .btn-white {
@@ -3761,19 +3761,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-primary {
-  --bs-btn-color: #57b28b;
-  --bs-btn-border-color: #57b28b;
+  --bs-btn-color: #08b44c;
+  --bs-btn-border-color: #08b44c;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #57b28b;
-  --bs-btn-hover-border-color: #57b28b;
+  --bs-btn-hover-bg: #08b44c;
+  --bs-btn-hover-border-color: #08b44c;
   --bs-btn-focus-shadow-rgb: 81, 67, 217;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #57b28b;
-  --bs-btn-active-border-color: #57b28b;
+  --bs-btn-active-bg: #08b44c;
+  --bs-btn-active-border-color: #08b44c;
   --bs-btn-active-shadow: none;
-  --bs-btn-disabled-color: #57b28b;
+  --bs-btn-disabled-color: #08b44c;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #57b28b;
+  --bs-btn-disabled-border-color: #08b44c;
   --bs-gradient: none;
 }
 
@@ -4069,9 +4069,9 @@ textarea.form-control-lg {
   --bs-dropdown-divider-margin-y: 0.5rem;
   --bs-dropdown-box-shadow: 0px 0px 40px rgba(29, 58, 83, 0.1);
   --bs-dropdown-link-color: var(--bs-gray-600);
-  --bs-dropdown-link-hover-color: #57b28b;
+  --bs-dropdown-link-hover-color: #08b44c;
   --bs-dropdown-link-hover-bg: rgba(var(--bs-primary-rgb), 0.1);
-  --bs-dropdown-link-active-color: #57b28b;
+  --bs-dropdown-link-active-color: #08b44c;
   --bs-dropdown-link-active-bg: rgba(var(--bs-primary-rgb), 0.1);
   --bs-dropdown-link-disabled-color: var(--bs-gray-600);
   --bs-dropdown-item-padding-x: 1rem;
@@ -4336,7 +4336,7 @@ textarea.form-control-lg {
   --bs-dropdown-link-hover-color: #fff;
   --bs-dropdown-divider-bg: rgba(255, 255, 255, 0.1);
   --bs-dropdown-link-hover-bg: rgba(var(--bs-primary-rgb), 0.1);
-  --bs-dropdown-link-active-color: #57b28b;
+  --bs-dropdown-link-active-color: #08b44c;
   --bs-dropdown-link-active-bg: rgba(var(--bs-primary-rgb), 0.1);
   --bs-dropdown-link-disabled-color: var(--bs-gray-500);
   --bs-dropdown-header-color: var(--bs-gray-500);
@@ -4541,7 +4541,7 @@ textarea.form-control-lg {
 .nav-pills {
   --bs-nav-pills-border-radius: 0.5rem;
   --bs-nav-pills-link-active-color: #fff;
-  --bs-nav-pills-link-active-bg: #57b28b;
+  --bs-nav-pills-link-active-bg: #08b44c;
 }
 .nav-pills .nav-link {
   border-radius: var(--bs-nav-pills-border-radius);
@@ -4607,9 +4607,9 @@ textarea.form-control-lg {
   --bs-navbar-padding-x: 0;
   --bs-navbar-padding-y: 0;
   --bs-navbar-color: #0b0a12;
-  --bs-navbar-hover-color: #57b28b;
+  --bs-navbar-hover-color: #08b44c;
   --bs-navbar-disabled-color: rgba(0, 0, 0, 0.3);
-  --bs-navbar-active-color: #57b28b;
+  --bs-navbar-active-color: #08b44c;
   --bs-navbar-brand-padding-y: 30px;
   --bs-navbar-brand-margin-end: 1rem;
   --bs-navbar-brand-font-size: 1.25rem;
@@ -5145,9 +5145,9 @@ textarea.form-control-lg {
 .navbar-dark,
 .navbar[data-bs-theme=dark] {
   --bs-navbar-color: #fff;
-  --bs-navbar-hover-color: #57b28b !important;
+  --bs-navbar-hover-color: #08b44c !important;
   --bs-navbar-disabled-color: rgba(255, 255, 255, 0.25);
-  --bs-navbar-active-color: #57b28b !important;
+  --bs-navbar-active-color: #08b44c !important;
   --bs-navbar-brand-color: #fff;
   --bs-navbar-brand-hover-color: #fff;
   --bs-navbar-toggler-border-color: rgba(255, 255, 255, 0.1);
@@ -5557,14 +5557,14 @@ textarea.form-control-lg {
   --bs-pagination-border-color: var(--bs-gray-300);
   --bs-pagination-border-radius: 0.5rem;
   --bs-pagination-hover-color: var(--bs-white);
-  --bs-pagination-hover-bg: #57b28b;
-  --bs-pagination-hover-border-color: #57b28b;
+  --bs-pagination-hover-bg: #08b44c;
+  --bs-pagination-hover-border-color: #08b44c;
   --bs-pagination-focus-color: var(--bs-link-hover-color);
   --bs-pagination-focus-bg: var(--bs-gray-200);
   --bs-pagination-focus-box-shadow: 0 0 0 0 rgba(81, 67, 217, 0.25);
   --bs-pagination-active-color: #fff;
-  --bs-pagination-active-bg: #57b28b;
-  --bs-pagination-active-border-color: #57b28b;
+  --bs-pagination-active-bg: #08b44c;
+  --bs-pagination-active-border-color: #08b44c;
   --bs-pagination-disabled-color: var(--bs-gray-400);
   --bs-pagination-disabled-bg: #fff;
   --bs-pagination-disabled-border-color: var(--bs-gray-300);
@@ -5882,8 +5882,8 @@ textarea.form-control-lg {
   --bs-list-group-disabled-color: var(--bs-secondary-color);
   --bs-list-group-disabled-bg: var(--bs-body-bg);
   --bs-list-group-active-color: #fff;
-  --bs-list-group-active-bg: #57b28b;
-  --bs-list-group-active-border-color: #57b28b;
+  --bs-list-group-active-bg: #08b44c;
+  --bs-list-group-active-border-color: #08b44c;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -16638,7 +16638,7 @@ textarea.form-control-lg {
 }
 
 .fill-primary {
-  fill: #57b28b !important;
+  fill: #08b44c !important;
 }
 
 .fill-white {
@@ -17210,13 +17210,13 @@ textarea.form-control-lg {
 }
 */
 .btn-primary-soft {
-  color: #57b28b;
+  color: #08b44c;
   background-color: rgba(81, 67, 217, 0.1);
 }
 .btn-primary-soft:active, .btn-primary-soft:hover, .btn-primary-soft:focus {
   color: #fff;
-  background-color: #57b28b;
-  border-color: #57b28b;
+  background-color: #08b44c;
+  border-color: #08b44c;
 }
 
 .btn-white-soft {
