--- a/users/templates/users/sign-in.html
+++ b/users/templates/users/sign-in.html
@@ -72,7 +72,7 @@
   </script>
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="{% static 'dashboard/images/favicon.ico' %}">
+  <link rel="shortcut icon" href="{% static 'frontend/img/logo.ico' %}">
 
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -101,7 +101,7 @@
               <!-- Vector Image -->
               <div class="col-lg-6 d-flex align-items-center order-2 order-lg-1">
                 <div class="p-3 p-lg-5">
-                  <img src="{% static 'dashboard/images/element/signin.svg' %}" alt="">
+                  <img src="{% static 'frontend/img/login.png' %}" alt="">
                 </div>
                 <div class="vr opacity-1 d-none d-lg-block"></div>
               </div>
