remove username in user model

--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -241,7 +241,7 @@
             </div>
             <!-- Content and input -->
             <div class="col-lg-4 text-lg-end">
-              <a href="#" class="btn btn-lg btn-primary mb-0"><i class="bi bi-whatsapp"></i> Escríbenos</a>
+              <a href="wa.link/5nb0lo" target="_blank" class="btn btn-lg btn-primary mb-0"><i class="bi bi-whatsapp"></i> Escríbenos</a>
             </div>
           </div> <!-- Row END -->
         </div>
