--- a/frontend/templates/frontend/booking_payment.html
+++ b/frontend/templates/frontend/booking_payment.html
@@ -110,8 +110,8 @@
                   </div>
                 </div>
                 <div class="card-footer p-4 pt-0">
-                  <p class="mb-0">Al realizar el pago estás aceptando nuestros <a href="#">Términos y condiciones</a>,
-                    también <a href="#">Política de devoluciones.</a>
+                  <p class="mb-0">Al realizar el pago estás aceptando nuestros <a href="https://drive.google.com/file/d/1GRplYJ4XGZgrq83DjfEvzGP1YR1R8juB/view?usp=sharing" target="_blank">Términos y condiciones</a>,
+                    también <a href="https://drive.google.com/file/d/1ec3lBQrv99d40_T6KPa4dPb_Di2C-PpU/view?usp=sharing" target="_blank">Política de privacidad.</a>
                   </p>
                 </div>
               </div>
