--- a/frontend/templates/frontend/footer.html
+++ b/frontend/templates/frontend/footer.html
@@ -66,16 +66,19 @@
         <h5 class="text-white mb-2">Síguenos en:</h5>
         <ul class="list-inline mb-0 mt-3">
           <li class="list-inline-item">
-            <a class="btn btn-sm px-2 bg-facebook mb-0" target="_blank" href="https://www.facebook.com/profile.php?id=61556673353614"><i
-              class="fab fa-fw fa-facebook-f"></i></a>
+            <a class="btn btn-sm px-2 bg-facebook mb-0" target="_blank"
+               href="https://www.facebook.com/profile.php?id=61556673353614"><i
+                class="fab fa-fw fa-facebook-f"></i></a>
           </li>
           <li class="list-inline-item">
-            <a class="btn btn-sm shadow px-2 bg-instagram mb-0" target="_blank" href="https://www.instagram.com/freesport.reservas"><i
-              class="fab fa-fw fa-instagram"></i></a>
+            <a class="btn btn-sm shadow px-2 bg-instagram mb-0" target="_blank"
+               href="https://www.instagram.com/freesport.reservas"><i
+                class="fab fa-fw fa-instagram"></i></a>
           </li>
           <li class="list-inline-item">
-            <a class="btn btn-sm shadow px-2 bg-white mb-0" target="_blank" href="https://www.tiktok.com/@freesport.reserva"><i
-              class="fab fa-fw fa-tiktok bg-white"></i>
+            <a class="btn btn-sm shadow px-2 bg-white mb-0" target="_blank"
+               href="https://www.tiktok.com/@freesport.reserva"><i
+                class="fab fa-fw fa-tiktok bg-white"></i>
             </a>
           </li>
         </ul>
@@ -92,13 +95,14 @@
           </div>
           <div class="nav mt-2 mt-lg-0">
             <ul class="list-inline text-primary-hover mx-auto mb-0">
-              <li class="list-inline-item me-0"><a class="nav-link text-body-secondary py-1" href="#">Políticas de
-                privacidad</a>
+              <li class="list-inline-item me-0"><a class="nav-link text-body-secondary py-1"
+                                                   href="https://drive.google.com/file/d/1GRplYJ4XGZgrq83DjfEvzGP1YR1R8juB/view?usp=sharing">Términos
+                y condiciones</a>
               </li>
-              <li class="list-inline-item me-0"><a class="nav-link text-body-secondary py-1" href="#">
-                Términos y condiciones</a></li>
-              <li class="list-inline-item me-0"><a class="nav-link text-body-secondary py-1 pe-0" href="#">
-                Política de devoluciones</a></li>
+              <li class="list-inline-item me-0"><a class="nav-link text-body-secondary py-1"
+                                                   href="https://drive.google.com/file/d/1ec3lBQrv99d40_T6KPa4dPb_Di2C-PpU/view?usp=sharing">
+                Política de privacidad</a>
+              </li>
             </ul>
           </div>
         </div>
